# imessage-cli

./: ARCHITECTURE.md  README.md  go.mod  go.sum  imessage  pyproject.toml  setup.py
cmd/imessage/: main.go
go/: README.md  go.mod
go/internal/cli/: cli.go
go/internal/database/: database.go
go/internal/sender/: sender.go
go/internal/tui/: tui.go
go/internal/watcher/: watcher.go
imessage_cli/: __init__.py  cli.py  contacts.py  database.py  sender.py  tui.py  watcher.py
internal/cli/: cli.go
internal/database/: contacts.go  database.go
internal/sender/: sender.go
internal/tui/: imagerender.go  tui.go
internal/watcher/: watcher.go
