[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imessage-cli"
version = "1.0.0"
description = "Read and respond to iMessages from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = []

[project.scripts]
imessage = "imessage_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/imessage-cli"
Repository = "https://github.com/yourusername/imessage-cli"

[tool.setuptools.packages.find]
include = ["imessage_cli*"]
